# ansimusicbot

./: .gitignore  Cargo.toml  README.md
src/: about.md  main.rs
src/ansimusic/: ascii.rs  frequencies.rs  mod.rs  music.rs  music_sequence_iterator.rs  player.rs  wav.rs
src/handler/: mod.rs  music.rs
