[package]
name = "ansimusic_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11", default-features = false, features = ["client", "model", "gateway", "rustls_backend", "cache", "builder"]}
tokio = {version = "1.0", features = ["full"]}
rand = {version = "0.8"}
